--- a/EDA_TP10/EDA_TP10/EDA_TP10.vcxproj.filters
+++ b/EDA_TP10/EDA_TP10/EDA_TP10.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="UserHandler.h">
       <Filter>Header Files\LCD</Filter>
     </ClInclude>
+    <ClInclude Include="textAdapter.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="marquesina.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="allegrolcd.cpp">
@@ -85,6 +91,12 @@
     </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="textAdapter.cpp">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="marquesina.cpp">
+      <Filter>Source Files\Utils</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
