--- a/EDA_TP10/EDA_TP10/packages.config
+++ b/EDA_TP10/EDA_TP10/packages.config
@@ -9,6 +9,7 @@
   <package id="boost_regex-vc141" version="1.67.0.0" targetFramework="native" />
   <package id="boost_system-vc141" version="1.67.0.0" targetFramework="native" />
   <package id="boost_timer-vc141" version="1.67.0.0" targetFramework="native" />
+  <package id="expat.v141" version="2.2.5.1" targetFramework="native" />
   <package id="PDCurses34" version="3.4.0.1" targetFramework="native" />
   <package id="PDCurses34.redist" version="3.4.0.1" targetFramework="native" />
 </packages>
